--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <a href="https://github.com/imanfsx" target="_blank"> Iman Sohail </a>
         is
         <a
-          href="https://github.com/imanfsx/Iman-Weather-App-Final"
+          href="https://github.com/imanfsx/Weather-App-Homework"
           target="_blank"
         >
           open-sourced on Github</a
         >
         and
-        <a href="https://imanfsxweatherapp.netlify.app/" target="_blank"
+        <a href="https://cozy-creponne-14fd55.netlify.app/" target="_blank"
           >hosted on Netlify.</a
         >.
       </footer>
